Fixed animation on mobile navigation

--- a/assets/scss/partials/_mobile-navigation.scss
+++ b/assets/scss/partials/_mobile-navigation.scss
@@ -26,7 +26,7 @@
             right: unset !important;            
             bottom: unset !important;
             left: unset !important;
-        }
+        }       
 
         &-item {
             display: flex;
@@ -37,8 +37,7 @@
             > a {
                 display: flex;
                 font-size: 18px;
-                align-items: center;/* 
-                border-bottom: 1px solid #e4e4e4; */
+                align-items: center;
                 height: 50px;                    
                 width: 100%;
                 padding: 0 15px;
@@ -51,8 +50,7 @@
                 > button {
                     margin-left: 0;
                     width: 50px;
-                    height: 50px;/* 
-                    border-bottom: 1px solid #e4e4e4;  */                  
+                    height: 50px;              
 
                     svg {
                         width: 24px;
@@ -106,7 +104,13 @@
             }
 
             > .wp-block-navigation__submenu-container {
+                
                 > .wp-block-navigation-item {
+                    &.is-active {
+                        > a {
+                            font-weight: 700;
+                        }
+                    }
                     > .wp-block-navigation__submenu-container {
                         > .wp-block-navigation-item {
                             > a {
@@ -131,7 +135,7 @@
             }
 
         }
-    }    
+    }   
 }
 
 .mobile-navigation-header {
