--- a/assets/scss/partials/_navigation.scss
+++ b/assets/scss/partials/_navigation.scss
@@ -12,4 +12,14 @@
             } 
         } 
     }
+
+    @media only screen and ( min-width: 1025px ) {
+
+        &__submenu-container {
+            .wp-block-navigation__submenu-icon {
+                margin-right: 10px;
+            }
+        }
+        
+    }
 }
